# ManaMind_AI

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Ma collection.txt  Makefile  Opened.txt  Projet_IA_MTG_Recommandation.pptx  README.md  alembic.ini  card_database_final.csv  cards.html  chandra-jace-and-nissa-from-magic-the-gathering.avif  collection_suggest.html  commander_suggest.html  deck_build.html  deck_config.html  deck_moves.html  deck_suggest.html  deck_trim.html  pyproject.toml  recommendations_example_Eluge_decklist.csv  recommendations_server.py  recommendations_view_slide16.html  results.html  server.py  start.py  tmp_stdout.txt
1_My decks/: Eluge, the Shoreless Sea.txt  Galadriel, Light of Valinor.txt  Kyler, Sigardian Emissary.txt  Lathril, Blade of the Elves.txt  Omnath, Locus of Creation.txt  Orah, Skyclave Hierophant.txt  Selvala, Heart of the Wilds.txt  Zimone and Dina.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20260602_1518_392e971f7759_init.py  20260605_add_game_changer.py
docs/: AGENTS.md  COMMANDER_PROFILE_BUILDER.md  DATABASE_SETUP.md  MTG_DB_CONTEXT.md  Manamind_visio.drawio  PROJECT_DOCUMENTATION.md  Projet_IA_MTG_Recommandation.md  Projet_IA_MTG_Recommandation.pptx  README.md  TODO.md  chatgpt_input.txt  chatgpt_input_project_context.txt  database.md  kpi_analysis_summary.md
examples/: test_dataset.py  test_kpi.py
outputs/: recommendations_Galadriel, Light of Valinor.csv  recommendations_Kyler, Sigardian Emissary.csv  recommendations_Omnath, Locus of Creation.csv  recommendations_Orah, Skyclave Hierophant.csv  recommendations_Shadowfax, Lord of Horses.csv  recommendations_Zimone and Dina.csv  recommendations_deck.csv  recommendations_v2_Omnath, Locus of Creation.csv  recommendations_v2_Orah, Skyclave Hierophant.csv  recommendations_v2_captain_nghathrod.csv  recommendations_v2_eluge_the_shoreless_sea.csv  recommendations_v2_galadriel_light_of_valinor.csv  recommendations_v2_kyler_sigardian_emissary.csv  recommendations_v2_lathril_blade_of_the_elves.csv  recommendations_v2_omnath_locus_of_creation.csv  recommendations_v2_orah_skyclave_hierophant.csv  recommendations_v2_selvala_heart_of_the_wilds.csv  recommendations_v2_shadowfax_lord_of_horses.csv  recommendations_v2_zimone_and_dina.csv  recommendations_v3_Shadowfax, Lord of Horses.csv  recommendations_v3_Zimone and Dina.csv  test_display.csv  test_reco.csv
outputs/recommendations/: recommendations_v2_captain_nghathrod.csv  recommendations_v2_captain_nghathrod.json  recommendations_v2_eluge_the_shoreless_sea.csv  recommendations_v2_eluge_the_shoreless_sea.json  recommendations_v2_galadriel_light_of_valinor.csv  recommendations_v2_galadriel_light_of_valinor.json  recommendations_v2_kyler_sigardian_emissary.csv  recommendations_v2_kyler_sigardian_emissary.json  recommendations_v2_lathril_blade_of_the_elves.csv  recommendations_v2_lathril_blade_of_the_elves.json  recommendations_v2_omnath_locus_of_creation.csv  recommendations_v2_omnath_locus_of_creation.json  (+8 more)
scripts/: Recommandations vectorielles V2.py  _explore_db.py  _inventory.py  annotate_clusters.py  build_card2vec.py  build_card_embeddings.py  build_ml_dataset.py  build_tag_cluster_bridge.py  cluster_cards.py  compute_commander_tfidf.py  compute_deck_stats.py  deck_improver.py  evaluate_models.py  generate_annotations.py  hybrid_recommender.py  import_game_changers.py  import_scryfall_cards.py  test_commander_profile_builder.py  test_vector_recommendation.py  validate_mtg_cards_db.py
uploads/: Captain N'ghathrod.txt  My Eluge.txt  Shadowfax, Lord of Horses.txt  deck.txt
(+34 files in other folders)
