[project]
name = "manamind-ai"
version = "0.1.0"
description = "manamind system recommender"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    # Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Data science
    "numpy>=1.26",
    "scikit-learn>=1.7.2",
    # Embeddings vectoriels — Phase V3
    "sentence-transformers>=2.7",
    "torch>=2.0",
    # Quality
    "pre-commit>=1.11.2",
    "pydantic>=2.12.4",
    "ruff>=0.0.17",
    # Base de données partagée MTG-DB
    "mtgdb @ git+https://github.com/Middel7/MTG-DB.git",
    # Database — conservé pour les outils Alembic locaux
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    # Import Scryfall — géré par MTG-DB, conservé pour compatibilité
    "httpx>=0.27",
    "ijson>=3.3",
    "tqdm>=4.66",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.ruff]
# Longueur max de ligne (format + lint)
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Familles de règles activées :
# E/W/F : erreurs et warnings style/pyflakes
# I     : organisation des imports
# B     : bugbear (détections de bugs potentiels)
# UP    : modernisation Python (>=3.12)
# ANN   : vérification des type hints (cohérent avec AGENTS.md)
select = ["E", "W", "F", "I", "B", "UP", "ANN"]

# Tu peux ignorer certaines règles trop strictes ici si besoin
ignore = [
    # Exemple : ignorer l’obligation de type hints pour variables
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]

# Fichiers/dossiers à exclure du lint
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "data",
]

[tool.ruff.lint.isort]
# Garder un style simple pour les imports
known-first-party = ["manamind"]
combine-as-imports = true

[tool.ruff.format]
# Options de formatage
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
